# scotty-kitteh-client

./: LICENSE  scotty-kitteh-client.cabal  stack.yaml
app/: Main.hs
src/: AddKitteh.hs  EditKitteh.hs  Interface.hs  KittehClient.hs  ListKitteh.hs  RemoveKitteh.hs  RestoreKitteh.hs  Types.hs  ViewKitteh.hs
